...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/step_navigation_prev_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/step_prev"
                android:drawableStart="@drawable/icon_prev"
                android:enabled="@{viewModel.prevStepEnable}"
                android:onClick="@{() -> eventHandler.onPrevStepClick()}"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/step_navigation_next_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/step_next"
                android:drawableEnd="@drawable/icon_next"
                android:enabled="@{viewModel.nextStepEnable}"
...
